--- a/.gitignore
+++ b/.gitignore
@@ -260,5 +260,6 @@ paket-files/
 __pycache__/
 *.pyc
 
-# Version control appsettings.sample.json instead
+# PAM settings
 appsettings.json
+Migrations/
