--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=PAM;User ID=pam;Password=abcd;MultipleActiveResultSets=true",
+    "UnitTestConnection": "Server=localhost;Database=PAM;User ID=pam;Password=abcd;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
