--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -5,7 +5,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "System": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "AllowedHosts": "*"
