--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -1,4 +1,7 @@
 {
+  "Presets": {
+    "AdminUser": "csun"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=PAM;User ID=pam;Password=abcd;MultipleActiveResultSets=true",
     "UnitTestConnection": "Server=localhost;Database=PAM;User ID=pam;Password=abcd;MultipleActiveResultSets=true"
