--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -1,4 +1,14 @@
 {
+  "Application": {
+    "Url": "http://localhost/5000",
+    "Email": "pam@localhost.localdomain"
+  },
+  "SMTP": {
+    "Host": "localhost",
+    "Port": 25,
+    "Username": "cysun@localhost.localdomain",
+    "Password": "abcd"
+  },
   "Presets": {
     "AdminUser": "csun"
   },
