--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,10 @@ indent_size = 2
 # JSON files
 [*.json]
 indent_size = 2
+# HTML and JavaScript files
+[*.{htm,html,cshtml,css,js}]
+indent_size = 2
+[*.{}]
 [*.md]
 trim_trailing_whitespace = false
 ############################### 
