--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -10,6 +10,7 @@
     "Password": "abcd"
   },
   "ActiveDirectory": {
+    "UseMockAD": true,
     "Path": "foobar.com",
     "Username": "e123456",
     "Password": "abcd"
