--- a/PAM/PAM.csproj
+++ b/PAM/PAM.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\LeavingProbationRequest\" />
+  </ItemGroup>
+
 </Project>
