Added a PathBase config parameter

--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -1,6 +1,7 @@
 {
   "Application": {
     "Url": "http://localhost:5000",
+    "PathBase": "/",
     "Email": "pam@localhost.localdomain"
   },
   "SMTP": {
