--- a/PAM/PAM.csproj
+++ b/PAM/PAM.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="FluentEmail.Razor" Version="2.5.2" />
     <PackageReference Include="FluentEmail.Smtp" Version="2.5.2" />
+    <PackageReference Include="itext7" Version="7.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
