--- a/PAM/appsettings.sample.json
+++ b/PAM/appsettings.sample.json
@@ -8,7 +8,8 @@
     "Host": "localhost",
     "Port": 25,
     "Username": "cysun@localhost.localdomain",
-    "Password": "abcd"
+    "Password": "abcd",
+    "EnableSSL":  false
   },
   "ActiveDirectory": {
     "UseMockAD": true,
